@@ -1,3 +1,8 @@
+2002-01-02  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/opf_container.cpp:
+	* pp/opf_filter.cpp: minor change
+
 2002-01-02  John Levon  <moz@compsoc.man.ac.uk>
 
 	* doc/oprofile.sgml: various docs improvements
